migrated from poetry to uv

--- a/pyarrow-conversions/pyproject.toml
+++ b/pyarrow-conversions/pyproject.toml
@@ -1,20 +1,8 @@
-[tool.poetry]
-name = "small-benchmarks"
-version = "0.1.0"
-description = ""
-authors = ["Lucas Parzianello <lucaspar@users.noreply.github.com>"]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.11"
-pyarrow = "^12.0.1"
-polars = "^0.18.2"
-pandas = "^2.0.2"
-ruff = "^0.0.272"
-black = "^23.3.0"
-psutil = "^5.9.5"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[project]
+    authors         = [{ name = "Lucas Parzianello" }]
+    dependencies    = ["black>=24.8.0", "pandas>=2.2.2", "polars>=1.6.0", "psutil>=6.0.0", "pyarrow>=17.0.0"]
+    description     = ""
+    name            = "small-benchmarks"
+    readme          = "README.md"
+    requires-python = ">=3.12,<3.13"
+    version         = "0.1.0"
